kubernetes/webreport-service-externaldns.yaml
apiVersion: v1
kind: Service
metadata:
  name: webreporter
  labels:
    app: webreporter
  annotations:
    external-dns.alpha.kubernetes.io/hostname: web-reporter-caas1.apps.home.local
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: webreporter
  sessionAffinity: ClientIP
  type: LoadBalancer
