kubernetes/webreport-service-requestip.yaml
apiVersion: v1
kind: Service
metadata:
  name: webreporter
  labels:
    app: webreporter
spec:
  ports:
    - port: 80
  selector:
    app: webreporter
  sessionAffinity: ClientIP
  type: LoadBalancer
  loadBalancerIP: 10.20.12.10
