kubernetes/webreport-ingress-nsx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webreport-frontend
  annotations:
    kubernetes.io/ingress.class: "nsx"
spec:
  rules:
  - host: webreport.home.local
    http:
      paths:
      - backend:
          serviceName: webreporter-svc
          servicePort: 80
